--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   logger: ^1.1.0
   http: ^0.13.5
+  provider: ^6.0.4
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
